Project2/force-app/main/default/objects/Charecter__c/Charecter__c.object-meta.xml
<CustomObject>
    <label>Charecter</label>
    <nameField>
        <label>Charecter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charecters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>