Project2/force-app/main/default/objects/Charecter__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>