Project2/force-app/main/default/objects/Charecter__c/fields/Portrait_Link__c.field-meta.xml
<CustomField>
    <fullName>Portrait_Link__c</fullName>
    <label>Portrait Link</label>
    <length>130</length>
    <type>Text</type>
</CustomField>