Project2/force-app/main/default/objects/Charecter__c/fields/Primary_Charecter__c.field-meta.xml
<CustomField>
    <fullName>Primary_Charecter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Charecter</label>
    <type>Checkbox</type>
</CustomField>