Project2/force-app/main/default/objects/Charecter__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <length>10</length>
    <type>Text</type>
</CustomField>