Project2/force-app/main/default/objects/Charecter__c/fields/Server__c.field-meta.xml
<CustomField>
    <fullName>Server__c</fullName>
    <label>Server</label>
    <length>15</length>
    <type>Text</type>
</CustomField>